--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	name = Jianzu Guan
 	email = jianzuguan@hotmail.com
+[merge]
+	tool = meld
+[mergetool "meld"]
+	cmd = "/usr/bin/meld" "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+
