--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,14 @@
 [user]
 	name = Jianzu Guan
-	email = jianzuguan@hotmail.com
+	email = jianzuguan@luminalearning.com
+
 [merge]
-	tool = meld
-[mergetool "meld"]
-	cmd = "/usr/bin/meld" "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+    tool = intellij
+[mergetool "intellij"]
+    cmd = /usr/local/bin/idea merge \
+    	$(cd $(dirname "$LOCAL") && pwd)/$(basename "$LOCAL") \
+	$(cd $(dirname "$REMOTE") && pwd)/$(basename "$REMOTE") \
+	$(cd $(dirname "$BASE") && pwd)/$(basename "$BASE") \
+	$(cd $(dirname "$MERGED") && pwd)/$(basename "$MERGED")
+    trustExitCode = true
 
